--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,7 +4,7 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let listing of allListings){ %>
     <a href="/listings/<%= listing._id %>" class="listing-link">
-    <div class="card col">
+    <div class="card col listing-card">
         <img src="<%=listing.image%>" class="card-img-top" style="height: 20rem" alt="<%=listing.title%>">
         <div class="card-img-overlay"></div>
         <div class="card-body">
@@ -18,7 +18,4 @@
     </a>
     <% } %>
     </div>
-    <!-- <ul> -->
-        <!-- <li><a href="/listings/<= listing._id %>"></a></li> -->
-<!-- </ul> -->
 </body>
